--- a/listBuilder.html
+++ b/listBuilder.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <main id="app">
-      <div class="container">
-        <div class="row">
+      <div class="container vh-100">
+        <div class="row align-items-center justify-content-center">
           <div class="col-12 col-md-6 col-lg-4">
             <div class="p-4" id="listBuilder">
               <h1 class="fw-bold mb-4">List Builder</h1>
@@ -27,7 +27,6 @@
                   <span id="totalListCounter">0</span>
                 </p>
               </div>
-
               <div class="" id="lists"></div>
             </div>
           </div>
