--- a/event-test.html
+++ b/event-test.html
@@ -8,8 +8,8 @@
     <style>
         body{
             padding: 20px;
-            background-color: black;
-            color: white;
+            /* background-color: black;
+            color: white; */
         }
         #btn{
             /* height: 100px;
